--- a/DESIGN_DOCUMENT_V0.1
+++ b/DESIGN_DOCUMENT_V0.1
@@ -1,1 +1,10 @@
 Game name: Death Style
+
+Genre: 2D Action Roguelike.
+Subgenres: Psychological Horror-Action. Action with Progression. Story-Driven Action.
+Synopsis: An obsessed avenger, trapped in a time loop of the day he exacts revenge on a gang of killers, utilizes a style inherited from his lineage—the Death Style.
+
+게임: 데스 스타일 (Death Style)
+장르: 2D 액션 로그라이크
+서브 장르: 심리적 공포 액션, 성장형 액션, 스토리 중심 액션
+시놉시스: 살인자 갱단에게 복수하는 날이 반복되는 시간 고리에 갇힌, 집념에 가득 찬 복수자. 그는 자신의 혈통에서 이어받은 전투 스타일, '죽음의 스타일'을 사용한다.
